# coding-interview

./: CMakeLists.txt  README.md
1_1_is_unique/: 1_1_is_unique.cpp  1_1_is_unique_test.cpp  CMakeLists.txt
1_2_check_permutation/: 1_2_check_permutation.cpp  CMakeLists.txt
1_3_urlify/: 1_3_urlify.cpp  CMakeLists.txt
1_4_palindrome_permutation/: 1_4_palindrome_permutation.cpp  CMakeLists.txt
1_5_one_away/: 1_5_one_away.cpp  CMakeLists.txt
1_6_string_compression/: 1_6_string_compression.cpp  CMakeLists.txt
1_7_rotate_matrix/: 1_7_rotate_matrix.cpp  CMakeLists.txt
1_8_zero_matrix/: 1_8_zero_matrix.cpp  CMakeLists.txt
1_9_string_rotation/: 1_9_string_rotation.cpp  CMakeLists.txt
2_1_remove_dups/: 2_1_remove_dups.cpp  CMakeLists.txt
2_2_return_kth_to_last/: 2_2_return_kth_to_last.cpp  CMakeLists.txt
2_3_delete_middle_node/: 2_3_delete_middle_node.cpp  CMakeLists.txt
2_4_partition/: 2_4_partition.cpp  CMakeLists.txt
2_5_sum_lists/: 2_5_sum_lists.cpp  CMakeLists.txt
2_6_palindrome/: 2_6_palindrome.cpp  CMakeLists.txt
2_7_intersection/: 2_7_intersection.cpp  CMakeLists.txt
2_8_loop_detection/: 2_8_loop_detection.cpp  CMakeLists.txt
3_1_three_in_one/: 3_1_three_in_one.cpp  CMakeLists.txt
3_2_stack_min/: 3_2_stack_min.cpp  CMakeLists.txt
3_3_stack_of_plates/: 3_3_stack_of_plates.cpp  CMakeLists.txt
3_4_queue_via_stacks/: 3_4_queue_via_stacks.cpp  CMakeLists.txt
3_5_sort_stack/: 3_5_sort_stack.cpp  CMakeLists.txt
3_6_animal_shelter/: 3_6_animal_shelter.cpp  CMakeLists.txt
4_10_check_subtree/: 4_10_check_subtree.cpp  CMakeLists.txt
4_11_random_node/: 4_11_random_node.cpp  CMakeLists.txt
4_12_paths_with_sum/: 4_12_paths_with_sum.cpp  CMakeLists.txt
4_1_route_between_nodes/: 4_1_route_between_nodes.cpp  CMakeLists.txt
4_2_minimal_tree/: 4_2_minimal_tree.cpp  CMakeLists.txt
4_3_list_of_depths/: 4_3_list_of_depths.cpp  CMakeLists.txt
4_4_check_balanced/: 4_4_check_balanced.cpp  CMakeLists.txt
4_5_validate_bst/: 4_5_validate_bst.cpp  CMakeLists.txt
4_6_successor/: 4_6_successor.cpp  CMakeLists.txt
4_7_build_order/: 4_7_build_order.cpp  CMakeLists.txt
4_8_first_common_ancestor/: 4_8_first_common_ancestor.cpp  CMakeLists.txt
4_9_bst_sequences/: 4_9_bst_sequences.cpp  CMakeLists.txt
