cmake_minimum_required(VERSION 3.4)
project(coding_interview)

set(CMAKE_CXX_STANDARD 14)

set(gtest_force_shared_crt ON CACHE BOOL "Always use msvcrt.dll")
set(GTEST_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/lib/googletest)
set(GTEST_INCLUDE_DIRS ${GTEST_ROOT}/include ${GTEST_ROOT})
set(GTEST_LIBRARIES gtest gtest_main)
add_subdirectory(${GTEST_ROOT} EXCLUDE_FROM_ALL)

enable_testing()

add_subdirectory(1_1_is_unique)
add_subdirectory(1_2_check_permutation)
add_subdirectory(1_3_urlify)
add_subdirectory(1_4_palindrome_permutation)
add_subdirectory(1_5_one_away)
add_subdirectory(1_6_string_compression)
add_subdirectory(1_7_rotate_matrix)
add_subdirectory(1_8_zero_matrix)
add_subdirectory(1_9_string_rotation)
add_subdirectory(2_1_remove_dups)
add_subdirectory(2_2_return_kth_to_last)
add_subdirectory(2_3_delete_middle_node)
add_subdirectory(2_4_partition)
add_subdirectory(2_5_sum_lists)
add_subdirectory(2_6_palindrome)
add_subdirectory(2_7_intersection)
add_subdirectory(2_8_loop_detection)
add_subdirectory(3_1_three_in_one)
add_subdirectory(3_2_stack_min)
add_subdirectory(3_3_stack_of_plates)
add_subdirectory(3_4_queue_via_stacks)
add_subdirectory(3_5_sort_stack)
add_subdirectory(3_6_animal_shelter)
add_subdirectory(4_1_route_between_nodes)
add_subdirectory(4_2_minimal_tree)
add_subdirectory(4_3_list_of_depths)
add_subdirectory(4_4_check_balanced)
add_subdirectory(4_5_validate_bst)
add_subdirectory(4_6_successor)
add_subdirectory(4_7_build_order)
add_subdirectory(4_8_first_common_ancestor)
add_subdirectory(4_9_bst_sequences)
add_subdirectory(4_10_check_subtree)
